--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         </div>
         
         <div class="instructions">
-            <h3>如何使用这个网站？</h3>
+            <h3>如何使用这个网站？11111</h3>
             <ol>
                 <li>点击"写新笔记"标签创建新笔记</li>
                 <li>在左侧编辑区使用Markdown格式编写内容</li>
